fixing white space

--- a/full-project-refactoring/index.css
+++ b/full-project-refactoring/index.css
@@ -158,10 +158,12 @@ p {
 a.cta-btn {
   font-size: 0.9em;
   padding: 0.2em 0.4em;
+  border-radius: 0.2em;
 }
 
 nav ul li a {
   font-size: 1.2em;
+  padding: 0.8em 1em;
 }
 
 h3 {
@@ -170,4 +172,13 @@ h3 {
 
 nav {
   text-align: left;
+}
+
+.inner-wrapper {
+  padding: 1em;
+}
+
+.panel {
+  padding: 0.5em 1em;
+  margin-bottom: 2em;
 }
